8245002: Windows GDI functions don't support NUMA interleaving

Reviewed-by: kbarrett, sjohanss, tschatzl